--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
   "dependencies": {
     "graceful-fs": "~3.0.4",
     "cross-spawn": "^0.2.3",
-    "tmp": "~0.0.25"
-  },
-  "optionalDependencies": {
+    "tmp": "~0.0.25",
     "phantomjs-prebuilt": "^2.1.3"
   },
   "devDependencies": {
